src/styles.css
@font-face {
  font-family: "Josefin Sans";
  src:
    url("./assets/fonts/JosefinSans-Medium.woff2") format("woff2"),
    url("./assets/fonts/JosefinSans-Medium.woff") format("woff");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Josefin Sans";
  src:
    url("./assets/fonts/JosefinSans-Regular.woff2") format("woff2"),
    url("./assets/fonts/JosefinSans-Regular.woff") format("woff");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

:root {
  --font-stack:
    system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  --accent: #ffc300;
}

:root.light {
  --text: #000;
  --main-bg: #fff;
  --selection: #ffecc9;
  --sidebar-bg: #f8f8f8;
  --miscellaneous: #d9d9d9;
  --light-text: #828282;
}

:root.dark {
  --text: #fff;
  --main-bg: #2d2d2d;
  --selection: #65530b;
  --sidebar-bg: #272727;
  --miscellaneous: #bbb;
  --light-text: #bbb;
}

:root.dark *::before,
:root.dark img[src$="svg"]:not(.add-new-todo img):not(.theme-picker img) {
  filter: invert(1);
}

::selection {
  background-color: var(--selection);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Josefin Sans", var(--font-stack);
  font-weight: 400;
  color: var(--text);
}

body {
  line-height: 1.5;
  display: grid;
  grid-template-columns: 1fr 4fr 1.5fr;
  background-color: var(--main-bg);
  height: 100vh;
}

.main,
.sidebar {
  padding: 1rem 2rem;
  overflow: auto;
  scrollbar-width: thin;
  scrollbar-color: var(--miscellaneous) var(--main-bg);
}

.sidebar {
  background-color: var(--sidebar-bg);
}

hr {
  border: 1px solid var(--miscellaneous);
}

.dark hr {
  border-color: #494949;
}

h1 + hr {
  width: 175px;
}

.sidebar button {
  display: flex;
  align-items: center;
  padding: 4px 14px 4px 0;
  gap: 8px;
  background: none;
  border: none;
  margin-top: 1rem;
  font-size: 1.2rem;
  cursor: pointer;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 2rem;
}

h1,
h2 {
  font-family: "Josefin Sans", var(--font-stack);
  font-weight: 500;
}

h1 span {
  color: var(--accent);
}

.sidebar.left ul:first-of-type li:not(li:last-child) {
  margin-bottom: 8px;
}

.inbox,
.today,
.upcoming {
  display: flex;
  align-items: center;
  gap: 12px;
}

.inbox::before {
  content: url(./assets/icons/inbox.svg);
  width: 20px;
  height: 25px;
}

.today::before {
  content: url(./assets/icons/calendar.svg);
  width: 20px;
  height: 25px;
}

.upcoming::before {
  content: url(./assets/icons/corner-down-right.svg);
  width: 20px;
  height: 25px;
}

.projects div {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.projects div img:hover {
  cursor: pointer;
}

.sidebar.left ol li {
  display: flex;
  align-items: center;
  gap: 12px;
}

.sidebar.left li:not(li:last-of-type) {
  margin-bottom: 8px;
}

.sidebar.left ol li::before {
  content: url(./assets/icons/arrow-right-circle.svg);
  width: 20px;
  height: 25px;
}

.sidebar button:hover,
.inbox:hover,
.today:hover,
.upcoming:hover,
.sidebar.left ol li:hover,
.projects-list li:hover,
.todos .add-new-todo:hover {
  cursor: pointer;
  background-color: var(--selection);
  border-radius: 15px;
}

ul,
ol {
  list-style: none;
  padding: 1rem 0;
}

.main-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.main-header .project-name.editable:hover,
.projects-list [contenteditable] {
  outline: 2px solid var(--miscellaneous);
}

.main-header .sort-options {
  display: flex;
  align-items: center;
}

.main-header .sort-options ul {
  display: flex;
  padding-left: 1rem;
  gap: 1rem;
}

.main-header .sort-options ul li {
  background-color: var(--miscellaneous);
  padding: 4px 14px 2px 14px;
  border-radius: 15px;
}

.main-header .sort-options ul li:hover {
  background-color: var(--accent);
  cursor: pointer;
}

.main-header .sort-options ul li label {
  display: block;
  cursor: pointer;
  color: #000;
}

.main-header .sort-options ul li input[type="radio"] {
  display: none;
}

.main-header .sort-options ul li:has(input:checked) {
  background-color: var(--accent);
}

.theme-picker {
  display: flex;
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 1.5rem;
  gap: 12px;
}

.theme-picker div {
  background-color: var(--miscellaneous);
  border: none;
  padding: 10px 10px 2px 10px;
  border-radius: 30px;
}

.theme-picker div img {
  width: 20px;
  height: 20px;
}

.theme-picker input {
  display: none;
}

.theme-picker :hover {
  cursor: pointer;
  background-color: var(--accent);
}

.theme-picker div:has(input:checked) {
  background-color: var(--accent);
}

.projects-list li {
  display: flex;
  align-items: center;
  gap: 12px;
}

.projects-list li::before {
  content: url("./assets/icons/folder.svg");
  width: 20px;
  height: 25px;
}

.priority-display {
  margin: 0px 6px;
}

.priority-display::before {
  content: "";
  display: inline-block;
  width: 15px;
  height: 15px;
  background-image: url("./assets/icons/alert-circle.svg");
  margin: 0px 6px;
  background-size: contain;
  vertical-align: -1px;
}

.project-display::before {
  content: "";
  display: inline-block;
  width: 15px;
  height: 15px;
  background-image: url("./assets/icons/folder.svg");
  margin: 0px 8px;
  background-size: contain;
  vertical-align: -1px;
}

.todos > :not(div) {
  color: var(--light-text);
}

.todos .add-new-todo {
  display: flex;
  align-items: center;
  padding: 4px 14px 4px 0;
  background: none;
  border: none;
  margin-top: 1rem;
  font-size: 1rem;
  cursor: pointer;
  color: var(--text);
}

.todos:has(.todo-div) .add-new-todo {
  margin-left: 1rem;
}

.todos .add-new-todo::before {
  content: "";
  display: inline-block;
  width: 18px;
  height: 18px;
  background-image: url(./assets/icons/plus-circle.svg);
  background-size: contain;
  margin-right: 6px;
  vertical-align: -1px;
}

.todo-div {
  display: flex;
  gap: 12px;
  padding: 1rem;
}

.todo-div:hover {
  background-color: var(--sidebar-bg);
  cursor: pointer;
}

.todo-div input {
  -webkit-appearance: none;
  appearance: none;
  align-self: flex-start;
  cursor: pointer;
  font: inherit;
  color: var(--text);
  background-color: var(--miscellaneous);
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 25px;
  flex-shrink: 0;
}

.todo-div input:checked {
  display: grid;
  place-content: center;
}

.todo-div input:checked::before {
  content: "";
  display: inline-block;
  width: 18px;
  height: 18px;
  background-image: url(./assets/icons/check.svg);
  background-size: contain;
  filter: invert(0);
}

.todo-div .todo-date::before {
  content: "";
  display: inline-block;
  width: 15px;
  height: 15px;
  background-image: url(./assets/icons/calendar.svg);
  background-size: contain;
  margin-right: 6px;
  vertical-align: -1px;
}

.delete-button {
  margin-left: auto;
  align-self: flex-end;
}

.todo-div:hover .delete-button::before,
.projects-list li:hover .delete-button::before {
  content: "";
  cursor: pointer;
  display: inline-block;
  width: 15px;
  height: 15px;
  background-image: url(./assets/icons/trash.svg);
  background-size: contain;
  margin-right: 6px;
  vertical-align: -1px;
}

.projects-list li:hover .delete-button::before {
  width: 14px;
  height: 14px;
  vertical-align: -3px;
}

.todo-div p {
  font-size: 0.9rem;
  margin: 2px 0;
  color: var(--light-text);
}

.modal {
  position: absolute;
  padding: 1.5rem;
  width: 600px;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
  background-color: var(--sidebar-bg);
  border: 1px solid var(--miscellaneous);
  border-radius: 15px;
  color: var(--light-text);
}

:root.dark .modal {
  background-color: #212121;
}

.modal[open] {
  display: flex;
  flex-direction: column;
}

.dialog-header {
  display: flex;
  gap: 12px;
}

.dialog-header img:first-of-type {
  margin-left: auto;
}

.dialog-header img {
  width: 20px;
  cursor: pointer;
  vertical-align: middle;
}

.modal #title,
.modal #new-title {
  padding: 8px;
  font-size: 1.5rem;
  background-color: inherit;
  border: none;
  width: 100%;
}

.modal textarea {
  padding: 8px;
  margin: 4px 0 8px 0;
  resize: vertical;
  background-color: inherit;
  border: none;
  font: inherit;
  min-height: 50px;
  width: 100%;
}

.modal .todo-info {
  padding: 8px;
  display: flex;
  gap: 12px;
  margin-top: auto;
}

.modal .todo-info input,
.modal .todo-info select,
.modal .todo-info option {
  color: #000;
}

.modal #title:focus,
.modal #new-title:focus,
.modal textarea:focus {
  outline: 2px solid var(--miscellaneous);
  border-radius: 8px;
}

button[type="submit"] {
  background: none;
  border: none;
}

#project-choice,
#new-project-choice {
  width: 100%;
}

.delete-modal {
  width: fit-content;
}

.delete-modal div {
  display: flex;
  justify-content: flex-end;
  gap: 12px;
  margin-top: 8px;
}

.delete-modal button {
  background-color: var(--miscellaneous);
  padding: 8px 14px;
  border-radius: 15px;
  border: none;
  cursor: pointer;
  color: #000;
}

.delete-modal button:hover {
  background-color: var(--accent);
}

